# rp-pytest-python-testing

./: .gitignore  conftest.py  fixture_demo.py  format_data.py  palindrome.py  pyproject.toml  test_assert_examples.py  test_format_data.py  test_palindrome.py  test_with_pytest.py
