[tool.poetry]
name = "rp-pytest-python-testing"
version = "0.1.0"
description = ""
authors = ["Bronson Duhart <bronson.duhart-at-gmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
